Fixed sticky layout issue with uploader results

--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,6 @@ input[type="text"] {
 	cursor: pointer;
 }
 
-
 #playlist p li:not(.playing):hover {
 	border-left: 2px solid rgba(248, 248, 242, 0.7);
 }
@@ -233,7 +232,7 @@ button.play {
 
 .uploader-results {
 	width: 30%;
-	margin-top: 10px;
+	margin-top: 20px;
 	height: 100px;
 	display: inline-block;
 	float: left;
